# uconfig

./: .gitignore  .gitmodules  README.md  build.bat  build.sh  clean_all.bat  clean_all.sh
inja_file_trim/inja_file_trim/: Source.cpp  inja_file_trim.sln  inja_file_trim.vcxproj  inja_file_trim.vcxproj.filters
inja_file_trim/inja_file_trim/test/: data.json  header.h  header.h.tmpl
projects/cmake/: ModuleDepends.cmake  ModuleImport.cmake
projects/lua53/: CMakeLists.txt  build.bat  build.sh  clean_all.bat  clean_all.sh
projects/openxlsx/: build.bat  build.sh  clean_all.bat  clean_all.sh
projects/spdlog/: build.bat  build.sh  clean_all.sh
projects/uconfig/: CMakeLists.txt  build.sh
projects/uconfig/include/: uconfig_lib.h
projects/uconfig/src/: Source.cpp
projects/uconfig/uniqs_xlsx_reader/: uniqs_xlsx_reader.cpp
projects/uconfiglua/: CMakeLists.txt  build.bat  build.sh  clean_all.bat  uconfiglua.code-workspace
projects/uconfiglua/src/: cppcalllua_lib.h  cppcalllua_lib_xlsxall.cpp  jass_luastate.cpp  pch.h
src/cppcalljs/: cppcalljs.sln
src/cppcalljs/cppcalljs/: ProcessOneSheet.cpp  ProcessOneSheet.h  common_functions.cpp  common_functions.h  cppcalljs.vcxproj  cppcalljs.vcxproj.filters  file_readwrite.cpp  file_readwrite.h  main.cpp  main_processonesheet.cpp  main_processonesheet.h  v8pp.h  (+5 more)
src/cppcalllua_exe/: Source.cpp  cppcalllua_exe.sln  cppcalllua_exe.vcxproj  cppcalllua_exe.vcxproj.filters
src/cppcalllua_lib/: LuaStackAutoProtector.h  cppcalllua_lib.cpp  cppcalllua_lib.h  cppcalllua_lib.vcxproj  cppcalllua_lib.vcxproj.filters  cppcalllua_lib_xlsxall.cpp  jass_luastate.cpp  jass_luastate.h
src/uconfiglua/: Makefile  cppcalllua_lib.h  cppcalllua_lib_xlsxall.cpp  jass_luastate.d  main.cpp  pch.h  uniqs_xlsx_reader.h
src/uniqs_xlsx_reader/: uniqs_xlsx_reader.cpp
testcsvcpp/testcsvcpp/: DT_Hero_Config.cpp  DT_Hero_Config.csv  DT_Hero_Config.h  csvhelper.cpp  csvhelper.h  main.cpp  main2.cpp  main3.cpp  ones.csv  strtk.hpp  testcsvcpp.sln  testcsvcpp.vcxproj  testcsvcpp.vcxproj.filters  three_cols.csv  uniqsconfig.cpp  uniqsconfig.h  uniqsconfigtypes.h
uconfig/: go.mod  go.sum  main.go  processone.go  uniqs.ini
uconfig/constants/: constants.go
uconfig/generator/: generator_lua.go  luahelper.go
uconfig/scripts/: fuck.lua  uconfig_lua.lua  uconfig_lua_sqlite.lua
uconfig/xlsxhelper/: xlsxhelper.go
uconfigcpp/: LuaStackAutoProtector.h  Source.cpp  process_one_sheet.h  process_one_sheet_js.cpp  process_one_sheet_lua.cpp  uconfig.sln  uconfig.vcxproj  uconfig.vcxproj.filters  uniqs_xlsx_reader.cpp  uniqs_xlsx_reader.h
uniqsconfiggenerator/: go.mod  go.sum  main.go  processone.go  uniqs.ini
uniqsconfiggenerator/constants/: constants.go
uniqsconfiggenerator/generator/: check.go  generator_cpp.go  generator_go.go  generator_javascript.go  generator_lua.go  header.go  jsongenerator.go
uniqsconfiggenerator/xlsxhelper/: xlsxhelper.go
(+8 files in other folders)
